# YumoFrame

./: .gitignore  .npmignore  .oxfmtrc.json  .oxlintrc.json  .release-it.json  AGENTS.md  README.en.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ruff.toml  tsconfig.adapters.json  tsconfig.json
.github/workflows/: publish.yml
docs/: architecture.md  development.md  tts.md
docs/superpowers/plans/: 2026-07-17-yumoframe-multi-template-roadmap.md
docs/superpowers/specs/: 2026-07-14-qwen3-tts-processor-design.md  2026-07-15-dashscope-qwen-tts-api-design.md  2026-07-15-segmented-tts-delivery-design.md  2026-07-16-segmented-tts-alignment-design.md  2026-07-16-tts-output-path-sync-design.md  2026-07-18-workspace-layout-design.md
processors/: tts-profiles.json
processors/funasr/: pyproject.toml
processors/funasr/src/funasr_processor/: __init__.py  __main__.py  cli.py
processors/funasr/src/media_text/: cli.py
processors/funasr/tests/: test_cli.py
processors/qwen3-tts/: .npmignore  pyproject.toml
processors/qwen3-tts/src/qwen3_tts_processor/: __init__.py  cli.py
processors/qwen3-tts/tests/: test_cli.py
runtime/processors/: tts-profiles.json
runtime/processors/qwen3-tts/: pyproject.toml
runtime/processors/qwen3-tts/src/qwen3_tts_processor/: __main__.py  cli.py
runtime/processors/qwen3-tts/tests/: test_cli.py
runtime/schemas/: lines.schema.json  project.schema.json  speech.schema.json  storyboard.schema.json  transcript.schema.json
runtime/skills/yumoframe-comedy-text/: SKILL.md
runtime/templates/comedy-text/: README.md  index.html  package.json  remotion.config.ts  tsconfig.json
schemas/: lines.schema.json  project.schema.json  speech.schema.json  storyboard.schema.json  transcript.schema.json
scripts/: build-template-adapters.mjs  run-packed-smoke.mjs  sync-version.mjs
skills/yumoframe/: SKILL.md
skills/yumoframe/scripts/: split-speech.mjs
src/: align.ts  cli.ts  comedy-text.ts  config.ts  json.ts  processor-runtime.ts  project-md.ts  runtime.ts  subtitles.ts  transcript-md.ts  tts-plan.ts  types.ts
src/commands/: dev.ts  doctor.ts  eject.ts  import.ts  init.ts  layout.ts  render.ts  resolve.ts  sync.ts  synthesize.ts  transcribe.ts  validate.ts
test/: cli.test.mjs  human-readable.test.mjs  packed-smoke.mjs  render-smoke.mjs  transcribe-smoke.mjs  tts-capabilities.test.mjs
tests/: cli.test.mjs  human-readable.test.mjs  packed-smoke.mjs  render-smoke.mjs  transcribe-smoke.mjs  tts-capabilities.test.mjs
(+26 files in other folders)
