[project]
name = "yumoframe-media-text"
version = "0.1.0"
description = "Extract timestamped text from audio and video with FunASR."
requires-python = ">=3.10"
dependencies = [
  "funasr>=1.2,<2",
  "modelscope>=1.20,<2",
  "torch>=2.2",
  "torchaudio>=2.2",
]

[project.scripts]
media-text = "media_text.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/media_text"]

[tool.uv]
package = true
