[project]
name = "yumoframe-funasr"
version = "0.1.0"
description = "Extract timestamped text from audio and video with FunASR."
requires-python = ">=3.10"
dependencies = [
  "funasr>=1.2,<2",
  "modelscope>=1.20,<2",
  "torch>=2.2",
  "torchaudio>=2.2",
]

[project.scripts]
funasr-processor = "funasr_processor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/funasr_processor"]

[tool.uv]
package = true

# src-layout package; point the language server at src/ + this project's .venv
[tool.basedpyright]
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
